--- a/articles/storsimple/TOC.yml
+++ b/articles/storsimple/TOC.yml
@@ -194,7 +194,7 @@
                   items:
                     - name: 'よくあるご質問: ローカル固定ボリューム'
                       href: storsimple-8000-local-volume-faq.md
-                - name: ロールベースのアクセス制御
+                - name: Azure ロールベースのアクセス制御
                   href: storsimple-8000-role-based-access-control.md
                 - name: ACR を管理する
                   href: storsimple-8000-manage-acrs.md
