--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -19,6 +19,7 @@
         - name: CLI の使用
           href: fhir-paas-cli-quickstart.md
         - name: ARM テンプレートの使用
+          displayName: Resource Manager
           href: fhir-paas-arm-template-quickstart.md
     - name: Azure IoT Connector for FHIR (プレビュー) をデプロイする - ポータル
       href: iot-fhir-portal-quickstart.md
