--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -69,6 +69,8 @@
               href: auth-remote-desktop-gateway.md
             - name: SAML 認証
               href: auth-saml.md
+            - name: SSH 認証
+              href: auth-ssh.md
             - name: Windows 認証 - KCD
               href: auth-kcd.md
             - name: ディレクトリ同期
