--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -41,8 +41,18 @@
           href: onboard-powershell.md
     - name: 管理する
       items:
-        - name: Azure VM 拡張機能の管理と使用
-          href: manage-vm-extensions.md
+        - name: Azure VM 拡張機能
+          items:
+            - name: 概要
+              href: manage-vm-extensions.md
+            - name: ポータルから拡張機能を管理する
+              href: manage-vm-extensions-portal.md
+            - name: CLI を使用して拡張機能を管理する
+              href: manage-vm-extensions-cli.md
+            - name: PowerShell を使用して拡張機能を管理する
+              href: manage-vm-extensions-powershell.md
+            - name: Resource Manager テンプレートを使用して拡張機能をデプロイする
+              href: manage-vm-extensions-template.md
         - name: エージェントの管理
           href: manage-agent.md
     - name: トラブルシューティング
@@ -55,8 +65,22 @@
   items:
     - name: データの保存場所
       href: data-residency.md
+    - name: Azure CLI
+      href: /cli/azure/ext/connectedmachine/connectedmachine
+    - name: Azure PowerShell
+      href: /powershell/module/az.connectedmachine
+    - name: .NET
+      href: /dotnet/api/overview/azure/hybridcompute/management
     - name: REST
       href: /rest/api/hybridcompute
+    - name: Go
+      href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/hybridcompute/mgmt/2020-08-02/hybridcompute'
+    - name: Java
+      href: /java/api/overview/azure/hybridcompute/management
+    - name: JavaScript
+      href: /javascript/api/%40azure/arm-hybridcompute
+    - name: Python
+      href: 'https://azuresdkdocs.blob.core.windows.net/$web/python/azure-mgmt-hybridcompute/2.0.0/index.html'
     - name: Azure Policy の組み込み
       displayName: 'samples, policies, definitions'
       href: policy-reference.md
