--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -1026,6 +1026,8 @@
           href: ../virtual-network/kubernetes-network-policies.md?toc=/azure/azure-monitor/toc.json#monitor-and-visualize-network-configurations-with-azure-npm
         - name: デプロイと HPA の監視
           href: insights/container-insights-deployment-hpa-metrics.md
+        - name: 永続ボリューム (PV) の監視
+          href: insights/container-insights-persistent-volumes.md
         - name: ライブ データを表示する
           items:
             - name: ライブ データ (プレビュー) の概要
