commit translated contents

--- a/articles/iot-pnp/TOC.yml
+++ b/articles/iot-pnp/TOC.yml
@@ -49,7 +49,7 @@
       href: tutorial-use-mqtt.md
     - name: MXChip デバイスとの対話 (サンプル)
       href: /samples/azure-samples/mxchip-iot-devkit-pnp-get-started/sample/
-    - name: デバイスをモジュールに移行する
+    - name: デバイス モジュールを接続する
       href: tutorial-migrate-device-to-module.md
 - name: 概念
   items:
@@ -85,8 +85,6 @@
       href: concepts-model-discovery.md
     - name: モデル パーサー
       href: concepts-model-parser.md
-    - name: 制限とクォータ
-      href: concepts-limits-quotas.md
     - name: 用語集
       href: iot-plug-and-play-glossary.md
 - name: 操作方法ガイド
