commit translated contents

--- a/articles/active-directory/roles/bread/toc.yml
+++ b/articles/active-directory/roles/bread/toc.yml
@@ -3,6 +3,14 @@
   topicHref: /azure/index
   items:
     - name: Active Directory
+      tocHref: /azure/active-directory/roles/
+      topicHref: /azure/active-directory/roles/index
+      items: null
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Active Directory
       tocHref: /azure/active-directory/fundamentals/
       topicHref: /azure/active-directory/index
       items:
@@ -91,9 +99,9 @@
   topicHref: /azure/index
   items:
     - name: Active Directory
-      tocHref: /azure/enterprise-users/
+      tocHref: /azure/active-directory/enterprise-users/
       topicHref: /azure/active-directory/index
       items:
         - name: ロール
-          tocHref: /azure/enterprise-users/
+          tocHref: /azure/active-directory/enterprise-users/
           topicHref: /azure/active-directory/roles/index
