--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -40,7 +40,7 @@
     - name: Java Spring
       items:
         - name: Spring Boot Initializer の使用
-          href: cache-java-spring-boot-initializer-with-redis-cache.md
+          href: /azure/developer/java/spring-framework/configure-spring-boot-initializer-java-app-with-redis-cache
     - name: ランキングの作成
       href: cache-web-app-cache-aside-leaderboard.md
     - name: 機械学習モデルのデプロイ
@@ -67,7 +67,7 @@
         - name: セキュリティ ベースライン
           href: security-baseline.md
     - name: キャッシュ アーキテクチャ
-      href: 'https://docs.microsoft.com/azure/architecture/best-practices/caching?toc=%2Fazure%2Fredis-cache%2Ftoc.json'
+      href: /azure/architecture/best-practices/caching?toc=%252fazure%252fredis-cache%252ftoc.json
 - name: 操作方法ガイド
   items:
     - name: プラン
@@ -169,7 +169,7 @@
     - name: Azure CLI
       href: /cli/azure/redis
     - name: REST
-      href: 'https://docs.microsoft.com/rest/api/redis/'
+      href: /rest/api/redis/
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.cache/allversions
     - name: Azure Policy の組み込み
@@ -184,7 +184,7 @@
     - name: ビデオ
       href: 'https://www.youtube.com/results?search_query=azure+redis+cache'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-cache-redis.html'
+      href: /answers/topics/azure-cache-redis.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/cache/'
     - name: Microsoft Learn でスキルを身に付ける
