--- a/articles/hdinsight/TOC.yml
+++ b/articles/hdinsight/TOC.yml
@@ -137,7 +137,7 @@
                 - name: カスタム アプリをインストールする
                   href: hdinsight-apps-install-custom-applications.md
                 - name: REST を使用してアプリをインストールする
-                  href: 'https://msdn.microsoft.com/library/mt706515.aspx'
+                  href: /rest/api/hdinsight/hdinsight-application
                 - name: HDInsight アプリを Azure Marketplace に発行する
                   href: hdinsight-apps-publish-applications.md
         - name: セキュリティで保護
@@ -301,7 +301,7 @@
         - name: Apache Hadoop サービスのヒープ ダンプの有効化
           href: ./hdinsight-hadoop-collect-debug-heap-dump-linux.md
         - name: Microsoft Q&A 質問ページのヘルプの表示
-          href: 'https://docs.microsoft.com/answers/topics/azure-hdinsight.html'
+          href: /answers/topics/azure-hdinsight.html
         - name: 料金計算ツール
           href: 'https://azure.microsoft.com/pricing/calculator/'
         - name: HDInsight 用の Windows ツール
@@ -433,8 +433,6 @@
                   href: ./spark/apache-spark-use-with-data-lake-store.md
                 - name: Azure SQL Database に接続する
                   href: ./spark/apache-spark-connect-to-sql-database.md
-                - name: Apache Spark と Cosmos DB を使用してラムダ アーキテクチャを実装する
-                  href: ../cosmos-db/lambda-architecture.md
                 - name: AutoML を使用して Azure ML ワークロードを実行する
                   href: ./spark/apache-spark-run-machine-learning-automl.md
         - name: トラブルシューティング
