--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: 882b492f3041d225b3861ddcfb36934649b3e987
-  ms.sourcegitcommit: 957c916118f87ea3d67a60e1d72a30f48bad0db6
+  ms.openlocfilehash: ca210f144d56aa56ddbcb959e0240bd4816dc3af
+  ms.sourcegitcommit: d767156543e16e816fc8a0c3777f033d649ffd3c
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/19/2020
-  ms.locfileid: "92200935"
+  ms.lasthandoff: 10/26/2020
+  ms.locfileid: "92547114"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -26,6 +26,9 @@ highlightedContent:
   - title: ドキュメントの最新情報
     itemType: whats-new
     url: whats-new-docs.md
+  - title: 開発オプション
+    itemType: concept
+    url: ./cognitive-services-development-options.md
   - title: Cognitive Services と機械学習
     itemType: concept
     url: ./cognitive-services-and-machine-learning.md
@@ -38,9 +41,6 @@ highlightedContent:
   - title: 言語のサポート
     itemType: reference
     url: ./language-support.md
-  - title: セキュリティ
-    itemType: concept
-    url: cognitive-services-security.md
   - title: サポートとヘルプのオプション
     itemType: reference
     url: ./cognitive-services-support-options.md
@@ -84,7 +84,7 @@ conceptualContent:
       text: Text Analytics
     - url: ./translator/index.yml
       itemType: overview
-      text: '[変換者]'
+      text: Translator
   - title: 音声
     summary: 音声をテキストに変換し、テキストを自然な音声に変換します。 ある言語を別の言語に翻訳し、話者の認証と認識を可能にします。
     links:
