--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -79,6 +79,8 @@
           href: configure-cross-origin-resource-sharing.md
         - name: エクスポートを構成する
           href: configure-export-data.md
+        - name: Private Link を構成する
+          href: configure-private-link.md
     - name: データのエクスポート
       expanded: false
       items:
