commit translated contents

--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -359,9 +359,9 @@
     - name: Azure IoT SDK
       items:
         - name: IoT サービスの SDK
-          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-hub-service-sdks
         - name: IoT デバイス SDK
-          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-hub-device-sdks
     - name: Azure Maps の使用条件
       href: 'https://azure.microsoft.com/support/legal/'
     - name: Azure Maps の価格
