--- a/articles/data-factory/v1/toc.yml
+++ b/articles/data-factory/v1/toc.yml
@@ -200,7 +200,7 @@
     - name: ケース スタディ
       href: data-factory-customer-case-studies.md
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-data-factory.html'
+      href: /answers/topics/azure-data-factory.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/data-factory/'
     - name: 料金計算ツール
