--- a/articles/internet-analyzer/TOC.yml
+++ b/articles/internet-analyzer/TOC.yml
@@ -25,13 +25,13 @@
     - name: Internet Analyzer のトラブルシューティング
       href: troubleshoot.md
     - name: Internet Analyzer の CLI リファレンス
-      href: 'https://docs.microsoft.com/cli/azure/ext/internet-analyzer/internet-analyzer?view=azure-cli-latest'
+      href: /cli/azure/ext/internet-analyzer/internet-analyzer?view=azure-cli-latest
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/roadmap/?category=networking'
     - name: ブログ
       href: 'https://azure.microsoft.com/blog/topics/networking'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
+      href: /answers/topics/azure-virtual-network.html
     - name: プレビューの SLA
       href: 'https://azure.microsoft.com/support/legal/preview-supplemental-terms'
     - name: SLA
