--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -11,27 +11,27 @@ metadata:
   author: markingmyname
   ms.author: maghan
   ms.date: 10/02/2019
-  ms.openlocfilehash: 8a9046a3f35401a279c4cd99ce5fee88bd67cb32
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 58e98721c443b0c4ecfce9bbfff88e7adf323342
+  ms.sourcegitcommit: fb3c846de147cc2e3515cd8219d8c84790e3a442
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89489274"
+  ms.lasthandoff: 10/27/2020
+  ms.locfileid: "92635747"
 landingContent:
 - title: Azure Data Factory について
   linkLists:
   - linkListType: overview
     links:
     - text: Azure Data Factory とは何ですか。
-      url: /azure/data-factory/introduction
+      url: ./introduction.md
   - linkListType: reference
     links:
     - text: ホワイトペーパー
-      url: /azure/data-factory/whitepapers
+      url: ./whitepapers.md
     - text: 価格
       url: https://azure.microsoft.com/pricing/details/data-factory/
     - text: 例を通じた価格の説明
-      url: /azure/data-factory/pricing-concepts
+      url: ./pricing-concepts.md
     - text: 最新の機能更新
       url: https://azure.microsoft.com/updates/?tag=data-factory
     - text: ADF のブログ
@@ -43,130 +43,130 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: Azure Data Factory UI
-      url: /azure/data-factory/quickstart-create-data-factory-portal
+      url: ./quickstart-create-data-factory-portal.md
     - text: データのコピー ツール
-      url: /azure/data-factory/quickstart-create-data-factory-copy-data-tool
+      url: ./quickstart-create-data-factory-copy-data-tool.md
     - text: Azure PowerShell
-      url: /azure/data-factory/quickstart-create-data-factory-powershell
+      url: ./quickstart-create-data-factory-powershell.md
     - text: .NET
-      url: /azure/data-factory/quickstart-create-data-factory-dot-net
+      url: ./quickstart-create-data-factory-dot-net.md
     - text: Python
-      url: /azure/data-factory/quickstart-create-data-factory-python
+      url: ./quickstart-create-data-factory-python.md
     - text: REST
-      url: /azure/data-factory/quickstart-create-data-factory-rest-api
+      url: ./quickstart-create-data-factory-rest-api.md
     - text: Resource Manager テンプレート
-      url: /azure/data-factory/quickstart-create-data-factory-resource-manager-template
+      url: ./quickstart-create-data-factory-resource-manager-template.md
 - title: データの移動
   linkLists:
   - linkListType: concept
     links:
     - text: コピー アクティビティの概要
-      url: /azure/data-factory/copy-activity-overview
+      url: ./copy-activity-overview.md
     - text: コピー パフォーマンスのチューニング
-      url: /azure/data-factory/copy-activity-performance
+      url: ./copy-activity-performance.md
   - linkListType: overview
     links:
     - text: データ レイクとデータ ウェアハウスの移行
-      url: /azure/data-factory/data-migration-guidance-overview
+      url: ./data-migration-guidance-overview.md
   - linkListType: tutorial
     links:
     - text: クラウドのデータをコピーする
-      url: /azure/data-factory/tutorial-copy-data-tool
+      url: ./tutorial-copy-data-tool.md
     - text: オンプレミスのデータをクラウドにコピーする
-      url: /azure/data-factory/tutorial-hybrid-copy-data-tool
+      url: ./tutorial-hybrid-copy-data-tool.md
     - text: データを一括コピーする
-      url: /azure/data-factory/tutorial-bulk-copy-portal
+      url: ./tutorial-bulk-copy-portal.md
     - text: データを増分コピーする
-      url: /azure/data-factory/tutorial-incremental-copy-overview
+      url: ./tutorial-incremental-copy-overview.md
     - text: ADLS Gen2 を読み込む
-      url: /azure/data-factory/load-azure-data-lake-storage-gen2
+      url: ./load-azure-data-lake-storage-gen2.md
     - text: Azure Synapse Analytics を読み込む
-      url: /azure/data-factory/load-azure-sql-data-warehouse
+      url: ./load-azure-sql-data-warehouse.md
     - text: SAP BW を読み込む
-      url: /azure/data-factory/load-sap-bw-data
+      url: ./load-sap-bw-data.md
 - title: データの変換
   linkLists:
   - linkListType: concept
     links:
     - text: マッピング データ フローとは
-      url: /azure/data-factory/concepts-data-flow-overview
+      url: ./concepts-data-flow-overview.md
   - linkListType: tutorial
     links:
     - text: データ フローの作成
-      url: /azure/data-factory/data-flow-create
+      url: ./data-flow-create.md
     - text: データ フローの式言語
-      url: /azure/data-factory/data-flow-expression-functions
+      url: ./data-flow-expression-functions.md
     - text: データ フローのデバッグ
-      url: /azure/data-factory/concepts-data-flow-debug-mode
+      url: ./concepts-data-flow-debug-mode.md
     - text: パイプライン内のデータ フロー アクティビティの実行
-      url: /azure/data-factory/control-flow-execute-data-flow-activity
+      url: ./control-flow-execute-data-flow-activity.md
     - text: データ フローの監視
-      url: /azure/data-factory/concepts-data-flow-monitoring
+      url: ./concepts-data-flow-monitoring.md
     - text: データ フローのパフォーマンス
-      url: /azure/data-factory/concepts-data-flow-performance
+      url: ./concepts-data-flow-performance.md
 - title: SSIS パッケージのリフトアンドシフト
   linkLists:
   - linkListType: overview
     links:
     - text: SSIS パッケージを Azure SQL Managed Instance に移行する
-      url: /azure/data-factory/scenario-ssis-migration-ssisdb-mi
+      url: ./scenario-ssis-migration-ssisdb-mi.md
   - linkListType: tutorial
     links:
     - text: Azure での SSIS パッケージの実行
-      url: /azure/data-factory/tutorial-deploy-ssis-packages-azure
+      url: ./tutorial-deploy-ssis-packages-azure.md
   - linkListType: how-to-guide
     links:
     - text: SSIS Integration Runtime のプロビジョニング
-      url: /azure/data-factory/create-azure-ssis-integration-runtime
+      url: ./create-azure-ssis-integration-runtime.md
     - text: 仮想ネットワークへの SSIS IR の参加
-      url: /azure/data-factory/join-azure-ssis-integration-runtime-virtual-network
+      url: ./join-azure-ssis-integration-runtime-virtual-network.md
     - text: SSIS パッケージの実行アクティビティを使用した SSIS パッケージの実行
-      url: /azure/data-factory/how-to-invoke-ssis-package-ssis-activity
+      url: ./how-to-invoke-ssis-package-ssis-activity.md
     - text: SSIS Integration Runtime のスケジュール設定
-      url: /azure/data-factory/how-to-schedule-azure-ssis-integration-runtime
+      url: ./how-to-schedule-azure-ssis-integration-runtime.md
     - text: SSIS IR の設定のカスタマイズ
-      url: /azure/data-factory/how-to-configure-azure-ssis-ir-custom-setup
+      url: ./how-to-configure-azure-ssis-ir-custom-setup.md
     - text: SSIS IR のライセンス付きコンポーネントのインストール
-      url: /azure/data-factory/how-to-develop-azure-ssis-ir-licensed-components
+      url: ./how-to-develop-azure-ssis-ir-licensed-components.md
 - title: Security
   linkLists:
   - linkListType: concept
     links:
     - text: データ移動のセキュリティに関する考慮事項
-      url: /azure/data-factory/data-movement-security-considerations
+      url: ./data-movement-security-considerations.md
     - text: データ ファクトリのマネージド ID
-      url: /azure/data-factory/data-factory-service-identity
+      url: ./data-factory-service-identity.md
     - text: Azure Key Vault への資格情報の格納
-      url: /azure/data-factory/store-credentials-in-key-vault
+      url: ./store-credentials-in-key-vault.md
 - title: 作成、監視、管理
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: Azure Data Factory を視覚的に監視する
-      url: /azure/data-factory/author-visually
+      url: ./author-visually.md
     - text: ソース管理
-      url: /azure/data-factory/source-control
+      url: ./source-control.md
     - text: 継続的インテグレーションと配信
-      url: /azure/data-factory/continuous-integration-deployment
+      url: ./continuous-integration-deployment.md
     - text: 反復開発とデバッグ
-      url: /azure/data-factory/iterative-development-debugging
+      url: ./iterative-development-debugging.md
     - text: 視覚的な監視
-      url: /azure/data-factory/monitor-visually
+      url: ./monitor-visually.md
     - text: Azure Monitor による監視
-      url: /azure/data-factory/monitor-using-azure-monitor
+      url: ./monitor-using-azure-monitor.md
     - text: SDK を使用した監視
-      url: /azure/data-factory/monitor-programmatically
+      url: ./monitor-programmatically.md
 - title: Languages
   linkLists:
   - linkListType: reference
     links:
     - text: Azure PowerShell
-      url: https://docs.microsoft.com/powershell/module/az.datafactory/
+      url: /powershell/module/az.datafactory/
     - text: .NET
-      url: https://docs.microsoft.com/dotnet/api/microsoft.azure.management.datafactory/
+      url: /dotnet/api/microsoft.azure.management.datafactory/
     - text: Python
-      url: https://docs.microsoft.com/python/api/overview/azure/datafactory?view=azure-python
+      url: /python/api/overview/azure/datafactory?view=azure-python
     - text: REST
-      url: https://docs.microsoft.com/rest/api/datafactory/
+      url: /rest/api/datafactory/
     - text: Resource Manager テンプレート
-      url: https://docs.microsoft.com/azure/templates/microsoft.datafactory/allversions
+      url: /azure/templates/microsoft.datafactory/allversions
