--- a/articles/internet-analyzer/index.yml
+++ b/articles/internet-analyzer/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: megan-beatty
   ms.author: mebeatty
   ms.date: 10/16/2019
-  ms.openlocfilehash: f1d8bc4bafe140a8522591e57bf2aa6665120d1f
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 226068f90ba43f5f38428396b1f67f61d341675e
+  ms.sourcegitcommit: 4cb89d880be26a2a4531fedcc59317471fe729cd
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "74896494"
+  ms.lasthandoff: 10/27/2020
+  ms.locfileid: "92676243"
 landingContent:
 - title: Internet Analyzer について
   linkLists:
@@ -23,7 +23,7 @@ landingContent:
     links:
     - text: Azure Internet Analyzer とは
       url: internet-analyzer-overview.md
-- title: 作業開始
+- title: はじめに
   linkLists:
   - linkListType: tutorial
     links:
@@ -48,4 +48,4 @@ landingContent:
     - text: Internet Analyzer のトラブルシューティング
       url: troubleshoot.md
     - text: Internet Analyzer の CLI リファレンス
-      url: https://docs.microsoft.com/cli/azure/ext/internet-analyzer/internet-analyzer?view=azure-cli-latest
+      url: /cli/azure/ext/internet-analyzer/internet-analyzer?view=azure-cli-latest
