--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -13,6 +13,7 @@
     - name: Traffic Manager プロファイルの作成 - Azure CLI
       href: quickstart-create-traffic-manager-profile-cli.md
     - name: Traffic Manager プロファイルの作成 - ARM テンプレート
+      displayName: Resource Manager
       href: quickstart-create-traffic-manager-profile-template.md
   expanded: true
 - name: チュートリアル
