--- a/articles/cognitive-services/Speech-Service/index-intent-recognition.yml
+++ b/articles/cognitive-services/Speech-Service/index-intent-recognition.yml
@@ -11,12 +11,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/10/2020
   ms.author: trbye
-  ms.openlocfilehash: 65b3f2322c4683eedef8cdfbc328664d4597df58
-  ms.sourcegitcommit: 58faa9fcbd62f3ac37ff0a65ab9357a01051a64f
+  ms.openlocfilehash: 6bc467ad0120c8e251eee39be2bcef001a497cad
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 04/29/2020
-  ms.locfileid: "81401484"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92756976"
 landingContent:
 - title: 意図認識について
   linkLists:
@@ -42,3 +42,9 @@ landingContent:
       url: ../luis/luis-language-support.md#languages-supported
     - text: 意図認識の価格
       url: https://azure.microsoft.com/pricing/details/cognitive-services/language-understanding-intelligent-services
+- title: ヘルプとフィードバック
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/speech-service/context/context
