--- a/articles/cognitive-services/Speech-Service/index-speech-to-text.yml
+++ b/articles/cognitive-services/Speech-Service/index-speech-to-text.yml
@@ -11,12 +11,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/19/2020
   ms.author: trbye
-  ms.openlocfilehash: c1f4b6b43f661251f764e65e5d5378952ab99d10
-  ms.sourcegitcommit: cf7caaf1e42f1420e1491e3616cc989d504f0902
+  ms.openlocfilehash: 99f29466c5f81eabbf0b603a89674fa2c70da9d8
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/22/2020
-  ms.locfileid: "83800871"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92756973"
 landingContent:
 - title: 音声テキスト変換について
   linkLists:
@@ -26,20 +26,12 @@ landingContent:
       url: speech-to-text.md
     - text: 一括音声テキスト変換
       url: batch-transcription.md
-    - text: 音声認識の基礎
-      url: speech-to-text-basics.md
     - text: コードなしの音声テキスト変換に Speech CLI を使用する
       url: spx-overview.md
   - linkListType: quickstart
     links:
-    - text: マイク入力を使用して音声を認識する
-      url: quickstarts/speech-to-text-from-microphone.md
-    - text: オーディオ ファイルから音声を認識する
-      url: quickstarts/speech-to-text-from-file.md
-    - text: Blob Storage に格納された音声を認識する
-      url: quickstarts/from-blob.md
-    - text: 参照入力による発音評価
-      url: rest-speech-to-text.md#pronunciation-assessment-parameters
+    - text: 音声変換の概要
+      url: get-started-speech-to-text.md
 - title: 音声テキスト変換を使用して開発する
   linkLists:
   - linkListType: how-to-guide
@@ -64,7 +56,7 @@ landingContent:
       url: how-to-custom-speech-train-model.md
     - text: ヒューマン ラベル付け文字起こしを作成する
       url: how-to-custom-speech-human-labeled-transcriptions.md
-- title: References
+- title: リファレンス
   linkLists:
   - linkListType: reference
     links:
@@ -74,3 +66,9 @@ landingContent:
       url: faq-stt.md
     - text: 音声テキスト変換の価格
       url: https://azure.microsoft.com/pricing/details/cognitive-services/speech-services
+- title: ヘルプとフィードバック
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/speech-service/context/context
