--- a/articles/cognitive-services/Speech-Service/index-speech-translation.yml
+++ b/articles/cognitive-services/Speech-Service/index-speech-translation.yml
@@ -11,12 +11,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/13/2020
   ms.author: trbye
-  ms.openlocfilehash: 8fa1b62b193fff2a0ca8f4825ece228f156e5318
-  ms.sourcegitcommit: cf7caaf1e42f1420e1491e3616cc989d504f0902
+  ms.openlocfilehash: 4b9e79bfca206c014ba16e1ac39a9ddb04559e13
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/22/2020
-  ms.locfileid: "83800846"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92756972"
 landingContent:
 - title: 音声翻訳について
   linkLists:
@@ -30,12 +30,8 @@ landingContent:
       url: spx-overview.md
   - linkListType: quickstart
     links:
-    - text: 音声テキスト変換の翻訳
-      url: quickstarts/translate-speech-to-text.md
-    - text: 音声を複数のターゲット言語に翻訳する
-      url: quickstarts/translate-speech-to-text-multiple-languages.md
-    - text: 音声間翻訳
-      url: quickstarts/translate-speech-to-speech.md
+    - text: 音声翻訳を使ってみる
+      url: get-started-speech-translation.md
 - title: 音声翻訳を使用して開発する
   linkLists:
   - linkListType: learn
@@ -56,3 +52,9 @@ landingContent:
       url: https://www.microsoft.com/translator/business/faq/
     - text: 音声翻訳の価格
       url: https://azure.microsoft.com/pricing/details/cognitive-services/speech-services/
+- title: ヘルプとフィードバック
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/speech-service/context/context
