--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -187,7 +187,7 @@
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-cdn.html'
+      href: /answers/topics/azure-cdn.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/cdn/'
     - name: 料金計算ツール
