--- a/articles/key-vault/keys/toc.yml
+++ b/articles/key-vault/keys/toc.yml
@@ -28,7 +28,7 @@
 - name: サンプル
   items:
     - name: Key Vault のコード サンプル
-      href: 'https://docs.microsoft.com/samples/browse/?expanded=azure&products=azure-key-vault'
+      href: /samples/browse/?expanded=azure&products=azure-key-vault
 - name: リファレンス
   items:
     - name: Azure PowerShell
@@ -40,7 +40,7 @@
     - name: Java
       href: /java/api/overview/azure/keyvault?view=azure-java-stable
     - name: Node.js
-      href: 'https://docs.microsoft.com/javascript/api/overview/azure/key-vault-index?view=azure-node-latest'
+      href: /javascript/api/overview/azure/key-vault-index?view=azure-node-latest
     - name: Python
       href: /python/api/overview/azure/keyvault-keys-readme?view=azure-python
     - name: REST
@@ -70,6 +70,6 @@
     - name: サービスの更新情報
       href: 'https://azure.microsoft.com/updates/?product=key-vault'
     - name: ブログ
-      href: 'https://blogs.technet.com/b/kv/'
+      href: /archive/blogs/kv/
     - name: 製品フィードバック
       href: 'https://feedback.azure.com/forums/906355-azure-key-vault'
